changed text decoration to none

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="logo" src="images/logo.svg" alt="">
         
         <ul class="nav-List">
-            <li><a href="#">Features</a></li>
+            <li><a href="#features">Features</a></li>
             <li><a href="#theme">Theme</a></li>
             <li><a href="#Sign in">Sign in</a></li>
         </ul>
